[gd_scene load_steps=4 format=3 uid="uid://uqoeqlw7y6fv"]

[ext_resource type="Texture2D" uid="uid://drvenu7lp5lgl" path="res://Assets/UI/musiedro.png" id="1_ei40v"]
[ext_resource type="Script" uid="uid://bqt2txymuxvl4" path="res://Scenes/UI/game_menu.gd" id="1_gah1i"]
[ext_resource type="FontFile" uid="uid://cjkyl0yvkstwv" path="res://Assets/Fonts/kirifont/KiriFont.ttf" id="2_m6y3d"]

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gah1i")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 0.596078, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.165
anchor_right = 0.54
anchor_bottom = 0.797
offset_left = -0.0640006
offset_top = 0.0799866
offset_right = 921.92
offset_bottom = 614.544
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_ei40v")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.575
anchor_top = 0.198
anchor_right = 0.954
anchor_bottom = 0.769
offset_left = -0.400024
offset_top = -0.304016
offset_right = -0.00805664
offset_bottom = -0.312042

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_m6y3d")
theme_override_font_sizes/font_size = 48
text = "Start Game"

[node name="AudioButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_m6y3d")
theme_override_font_sizes/font_size = 48
text = "Audio Menu"

[node name="HowToButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_m6y3d")
theme_override_font_sizes/font_size = 48
text = "How To PLay"

[node name="CreditButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_m6y3d")
theme_override_font_sizes/font_size = 48
text = "Credits"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/AudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HowToButton" to="." method="_on_how_to_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditButton" to="." method="_on_credit_button_pressed"]
